# engineio-client-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: builder.rs  client.rs  connection.rs  error.rs  handler.rs  lib.rs  packet.rs  pool.rs  socket.rs  transports.rs
src/transports/: mod.rs  polling.rs  websocket.rs
