[package]
name = "engineio"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
description = "A engine.io client library in Rust."
readme = "README.md"
repository = "https://github.com/NeoLegends/engineio-rs"
keywords = ["engine", "engineio", "engine.io", "websocket"]
license = "MITNFA"

[dependencies]
eventual = "0.1.*"
hyper = { version = "0.9.5", default-features = false }
lazy_static = "0.2.*"
rand = "0.3.*"
rustc-serialize = "0.3.*"
threadpool = "1.3.*"
url = "1.1.*"
uuid = { version = "0.2.*", features = ["v4"] }
ws = "0.4.*"

[features]
default = []
ssl = ["hyper/ssl", "ws/ssl"]