[package]
name = "engineio"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
description = "An engine.io client library in Rust."
readme = "README.md"
repository = "https://github.com/NeoLegends/engineio-rs"
keywords = ["engine", "engineio", "engine.io", "websocket"]
license = "MITNFA"

[dependencies]
futures = "0.1"
lazy_static = "0.2"
rand = "0.3"
rustc-serialize = "0.3"
tokio-core = "0.1"
tokio-request = { git = "https://github.com/NeoLegends/tokio-request", default-features = false, features = ["rustc-serialization"] }
url = "1.1"
ws = "0.5"

[features]
default = []