[package]
name = "engineio-client"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
description = "An engine.io client library using asynchronous I/O."
readme = "README.md"
repository = "https://github.com/NeoLegends/engineio-client-rs"
keywords = ["engine", "engineio", "engine.io", "client", "websocket"]
license = "MITNFA"

[dependencies]
futures = "0.1"
rand = "0.3"
rustc-serialize = "0.3"
tokio-core = "0.1"
tokio-request = { git = "https://github.com/NeoLegends/tokio-request" }
url = "1.1"
ws = "0.5"